[gd_scene load_steps=2 format=2]

[ext_resource path="res://layout/block/layout_block_inspector.gd" type="Script" id=1]

[node name="LayoutBlockInspector" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 118.0
margin_bottom = 14.0
text = "LayoutBlock"

[node name="AddTrain" type="Button" parent="."]
margin_top = 18.0
margin_right = 118.0
margin_bottom = 38.0
text = "Add train"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddPriorSensorButton" type="Button" parent="."]
margin_top = 42.0
margin_right = 118.0
margin_bottom = 62.0
text = "Add prior sensor"

[node name="AddTrainDialog" type="ConfirmationDialog" parent="."]
margin_top = 42.0
margin_right = 200.0
margin_bottom = 112.0
window_title = "Add Train"

[node name="VBoxContainer" type="VBoxContainer" parent="AddTrainDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="AddTrainDialog/VBoxContainer"]
margin_right = 184.0
margin_bottom = 24.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AddTrainDialog/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
text = "Name:"

[node name="TrainNameEdit" type="LineEdit" parent="AddTrainDialog/VBoxContainer/GridContainer"]
margin_left = 46.0
margin_right = 184.0
margin_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="AddTrain" to="." method="_on_AddTrain_pressed"]
[connection signal="pressed" from="AddPriorSensorButton" to="." method="_on_AddPriorSensorButton_pressed"]
[connection signal="confirmed" from="AddTrainDialog" to="." method="_on_AddTrainDialog_confirmed"]
